tests/errors/semantics/invalid_deref_value.odl
main :: () -> void  {
    x := 0;
    *x;
};